Add Firebase authentication and Firestore integration, including user sign-in, sign-up, and data migration features. Update project configuration files and add necessary dependencies. Implement UI for login, signup, and profile management, along with migration functionality from Hive to Firebase.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Expen</string>
+    <string name="default_web_client_id">666404751902-v2nah1cebnj8iae7cg5s9rvve9hn50g5.apps.googleusercontent.com</string>
 </resources>
